--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.2
+specVersion: 0.0.4
 description: Gravatar for Ethereum
 repository: https://github.com/graphprotocol/example-subgraphs
 schema:
@@ -6,13 +6,13 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Gravity
-    network: mainnet
+    network: mumbai
     source:
-      address: '0x2E645469f354BB4F5c8a05B3b30A929361cf77eC'
+      address: '0x2b165C265a0D20E697Dfce2B9c4aF27B5A458611'
       abi: Gravity
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.5
+      apiVersion: 0.0.6
       language: wasm/assemblyscript
       entities:
         - Gravatar
